[project]
name = "countdown-tray"
version = "1.0.0"
description = "Create a system tray icon that counts down"
authors = [
    {name = "Ethan Dawes", email = "ethand.python@gmail.com"},
]
dependencies = ["pystray>=0.19.5", "pillow>=11.0.0", "cronsim>=2.6"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
countdown-tray = "countdown_tray:main"
